traefik/pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-both-snippets.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-both-snippets
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Server-Snippet "server-value";
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Configuration-Snippet "configuration-value";

spec:
  ingressClassName: nginx
  rules:
    - host: snippet.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
